src/test/resources/semantic/reject/mistakeInElseBlock.ul
void main() {
}

void foo() {
    string condition;

    if (false) {
        condition = "string1";
    } else {
        condition = "string2";
        return condition;
    }
}
